Upgrades the version of the operator-sdk to v0.11.x
This includes changes from #499

As part of the upgrade, this also:
* upgrades operator-custom-metrics to 0.4.1
* new controller-runtime starts a default metrics server
* moves default metrics server to port 8081 to avoid conflict with operator-custom-metrics
* includes openapi changes (CRDs, CRs)
* renames CRD and CR files due to the above
* renames CR and Template files in /hack due to above

REF: [Upgrade aws-account-operator to sdk v0.16.x](https://issues.redhat.com/browse/OSD-5097)

Signed-off-by: Christopher Collins <collins.christopher@gmail.com>

--- a/docs/1.0-Installation.md
+++ b/docs/1.0-Installation.md
@@ -109,7 +109,7 @@ This does the following:
 - Ensures existence of the namespace in which the operator will run.
 - Installs the [credentials described above](#12-requirements).
 - Installs the operator's [Custom Resource Definitions](deploy/crds).
-- Creates an initially zero-size [accountpool CR](hack/files/aws_v1alpha1_zero_size_accountpool.yaml).
+- Creates an initially zero-size [accountpool CR](hack/files/aws.managed.openshift.io_v1alpha1_zero_size_accountpool.yaml).
 
 Predeployment only needs to be done once, unless you are modifying the above artifacts.
 
