--- a/docs/1.0-Installation.md
+++ b/docs/1.0-Installation.md
@@ -1,5 +1,13 @@
 # 1.0 Installation
 
+### 1.0.1 - Glossary
+
+Terms used in this guide and what they mean for this guide:
+
+* Payer Account - AWS Organizations give you a "unified bill" so to speak under a single account. Sub accounts are created under this "Payer Account", which is the highest-level account in this organization. SREs all should also have an IAM user with credentials on each payer account, which has AssumeRole Permissions as administrator into each of these sub-accounts.
+* Jump Role - Using AWS Assume-Role Chaining, a Jump Role is an intermediary role that sits between a given IAM user and a customer's access role, providing a single point of entry.
+* Access Role - A role inside the cluster's account that we assume to perform tasks.
+
 ## 1.1 - Prerequisites
 
 ### 1.1.1 - IAM User and Secret
@@ -48,7 +56,99 @@ OPERATOR_SECRET_ACCESS_KEY
 
 Alternatively, if you have the credentials stored in your `~/.aws/credentials` file, you can use the script in `scripts/set_operator_credentials.sh` to create the secret from that profile: `./scripts/set_operator_credentials.sh my-aws-profile`
 
-### 1.1.2 Config Map
+### 1.1.2 AWS Accounts
+
+As you're working on the operator you should have two accounts dedicated for your use of this operator, under each of the osd-staging payer accounts.  Work with your manager or functional team lead to figure out what these account numbers are and save them, you'll need them later.
+
+### 1.1.3 STS Roles
+
+To run the operator tests for STS mode you will need to create two roles &mdash; one in each of the AWS accounts you have been assigned.  The name of these roles doesn't matter when you create it, however you will need to know the ARN of both in order to configure the operator to use them.
+
+#### 1.1.3.1 - Jump Role
+
+The Jump Role will be a simulation of the role that we use as a bastion of sorts. For the STS Architecture, we have an IAM user that assumes a specific role in a specific account, and then using that role they can assume role into the cluster's account in order to run operations as necessary.
+
+You will need to create this jump role in the first osd-staging aws account assigned to you. You will need to add your Payer Account IAM user credentials as the the Principal in the Trust Relationship. This user should also be the same user that you use to create the AWS Account Operator credentials.
+
+The Jump role should only require the permissions to assume-roles.  No other permissions should be necessary. You will probably need to create the IAM policy first before the Role.
+
+Example Assume Role Policy:
+```
+{
+    "Version": "2012-10-17",
+    "Statement": [
+        {
+            "Effect": "Allow",
+            "Action": "sts:AssumeRole",
+            "Resource": "*"
+        }
+    ]
+}
+```
+
+Example Trust Relationship for role:
+```
+{
+    "Version": "2012-10-17",
+        "Statement": [
+        {
+            "Effect": "Allow",
+            "Principal": {
+                "AWS": "arn:aws:iam::[payer-account-id]:user/[your-username]"
+            },
+            "Action": "sts:AssumeRole",
+            "Condition": {}
+        }
+        ]
+}
+```
+
+You will need to put the ARN for this jump role into the Operator Config Map created later.
+
+#### 1.1.3.2 - Access Role
+
+The Access Role will be a simulation of a role on a customer's account that gives us access to initalize the regions and initialize a cluster.  On external customer accounts this is assumed to be a very locked-down role with ONLY the necessary permissions needed to run the operator or install the cluster resources. Minimal permissions required for the role are provided below.
+
+Example Trust Relationship:
+```
+{
+  "Version": "2012-10-17",
+  "Statement": [
+    {
+      "Effect": "Allow",
+      "Principal": {
+        "AWS": "arn:aws:iam::[jump-role-account-id]:role/[jump-role-name]"
+      },
+      "Action": "sts:AssumeRole",
+      "Condition": {}
+    }
+  ]
+}
+```
+
+Example minimal permissions Policy Document
+```
+{
+  "Version": "2012-10-17",
+  "Statement": [
+    {
+      "Effect": "Allow",
+      "Action": [
+        "ec2:RunInstances",
+        "ec2:TerminateInstances",
+        "ec2:DescribeInstanceStatus",
+        "ec2:CreateTags",
+        "ec2:DeleteTags"
+      ],
+      "Resource": "*"
+    }
+  ]
+}
+```
+
+You will need to put the ARN for this access role into your environment in order for this to be used to create accountclaims within the make tests.
+
+### 1.1.3 Config Map
 
 The operator also needs a ConfigMap that has:
 
@@ -56,13 +156,15 @@ Account Limit: The soft limit of AWS Accounts which is the number compared again
 Base: Base OU ID to place accounts in when claimed
 Root: Root OU ID to create new OUs under
 
+
 ```json
 {
     "apiVersion": "v1",
     "data": {
         "account-limit": "4801",
         "base": "ou-0wd6-tmsbvahq",
-        "root": "r-0wd6"
+        "root": "r-0wd6",
+        "sts-jump-role": "[arn from the jump role created above]"
     },
     "kind": "ConfigMap",
     "metadata": {
