improve operator documentation

--- a/docs/2.0-Custom-Resources.md
+++ b/docs/2.0-Custom-Resources.md
@@ -2,7 +2,7 @@
 
 ## 2.1. AccountPool CR
 
-The AccountPool CR holds the information about the available number of accounts that can be claimed for cluster provisioning.
+The `AccountPool` CR holds information about the available number of accounts that can be claimed for cluster provisioning.
 
 ```yaml
 apiVersion: aws.managed.openshift.io/v1alpha1
@@ -16,7 +16,7 @@ spec:
 
 ## 2.2. Account CR
 
-The Account CR holds the details about the AWS account that was created, where the account is in the process of becoming ready, and whether its linked to an AccountClaime, i.e. claimed.
+The `Account` CR holds the details about the AWS account that was created, where the account is in the process of becoming ready, and whether it is linked to an `AccountClaim`, i.e., claimed.
 
 ```yaml
 apiVersion: aws.managed.openshift.io/v1alpha1
@@ -32,7 +32,7 @@ spec:
 
 ## 2.3. AccountClaim CR
 
-The AccountClaim CR links to an available account and stores the name of the associated secret with AWS credentials for that account.
+The `AccountClaim` CR links to an available `Account` and stores the name of the associated secret with AWS credentials for that account.
 
 ```yaml
 apiVersion: aws.managed.openshift.io/v1alpha1
@@ -55,7 +55,7 @@ spec:
 
 ## 2.4. AWSFederatedRole CR
 
-The AWSFederatedRole CR contains a definition of a desired AWS Role, with both managed and custom Policies included
+The `AWSFederatedRole` CR contains a definition of the desired AWS Role, with both managed and custom Policies included
 
 ```yaml
 apiVersion: aws.managed.openshift.io/v1alpha1
@@ -76,7 +76,7 @@ spec:
         action:
         - "aws-portal:ViewAccount"
         - "aws-portal:ViewBilling"
-        resource: 
+        resource:
         - "*"
   # list of  AWS managed
   awsManagedPolicies:
@@ -88,7 +88,7 @@ spec:
 
 ## 2.4. AWSFederatedAccountAccess CR
 
-The AWSFederatedAccountAccess CR creates an instance of an AWSFederatedRole in AWS and allows the target IAM account to assume it
+The `AWSFederatedAccountAccess` CR creates an instance of an `AWSFederatedRole` in AWS and allows the target IAM account to assume its role.
 
 ```yaml
 apiVersion: aws.managed.openshift.io/v1alpha1
@@ -97,11 +97,11 @@ metadata:
   name: example-account-access
   namespace: aws-account-operator
 spec:
-  awsCustomerCredentialSecret: 
-    name: {Name for secret with osdManagedAdmin credentials} 
+  awsCustomerCredentialSecret:
+    name: {Name for secret with osdManagedAdmin credentials}
     namespace: {Namespace for the secret with osdManagedAdmin credentials}
   externalCustomerAWSIAMARN: arn:aws:iam::${EXTERNAL_AWS_ACCOUNT_ID}:user/${EXTERNAL_AWS_IAM_USER}
   awsFederatedRole:
     name: {Name of desired AWSFederatedRole}
-    namespace: aws-account-operator  
+    namespace: aws-account-operator
 ```
