--- a/docs/1.0-Installation.md
+++ b/docs/1.0-Installation.md
@@ -11,7 +11,10 @@ Terms used in this guide and what they mean for this guide:
 ## 1.1 - Prerequisites
 
 ### 1.1.1 - IAM User and Secret
-The operator requires a secret named `aws-account-operator-credentials` in the `aws-account-operator` namespace, containing credentials to the AWS payer account you wish to create accounts in. The secret should contain credentials for an IAM user in the payer account with the data fields `aws_access_key_id` and `aws_secret_access_key`.
+
+The operator requires a secret named `aws-account-operator-credentials` in the `aws-account-operator` namespace, containing credentials to the AWS payer account you wish to create accounts in. The payer account is the root account in an organization and can create linked accounts and manage them.
+
+The secret should contain credentials for an IAM user in the payer account with the data fields `aws_access_key_id` and `aws_secret_access_key`.
 
 The user should have the following IAM permissions:
 
@@ -47,14 +50,16 @@ Permissions to allow the user to interact with the support center:
 
 ```
 
-Once the user has been configured, you can deploy the secret by exporting the access key and secret to the following variables and running `make deploy-aws-account-operator-credentials`:
+Once the user has been configured, you can deploy the secret by exporting the access key and secret to the env variables listed below, and then, running `make deploy-aws-account-operator-credentials`:
 
 ```
 OPERATOR_ACCESS_KEY_ID
 OPERATOR_SECRET_ACCESS_KEY
 ```
 
-Alternatively, if you have the credentials stored in your `~/.aws/credentials` file, you can use the script in `scripts/set_operator_credentials.sh` to create the secret from that profile: `./scripts/set_operator_credentials.sh my-aws-profile`
+Alternatively, if you have the credentials stored in your `~/.aws/credentials` file, you can use the script in `hack/scripts/set_operator_credentials.sh` to create the secret from that profile:
+
+    .hack/scripts/set_operator_credentials.sh my-aws-profile
 
 ### 1.1.2 AWS Accounts
 
@@ -152,9 +157,10 @@ You will need to put the ARN for this access role into your environment in order
 
 The operator also needs a ConfigMap that has:
 
-Account Limit: The soft limit of AWS Accounts which is the number compared against when creating new accounts
-Base: Base OU ID to place accounts in when claimed
-Root: Root OU ID to create new OUs under
+* `account-limit`: The soft limit of AWS accounts which is the number compared against when creating new accounts
+* `base`: Base [OU](https://docs.aws.amazon.com/organizations/latest/userguide/orgs_manage_ous.html) ID to place accounts in when claimed
+* `root`: Root [OU](https://docs.aws.amazon.com/organizations/latest/userguide/orgs_manage_ous.html) ID to create new OUs under
+
 
 
 ```json
@@ -173,34 +179,51 @@ Root: Root OU ID to create new OUs under
     }
 }
 ```
+The ConfigMap could be generated and deployed with the `hack/scripts/set_operator_configmap.sh` script.
+
+    .hack/scripts/set_operator_configmap.sh -a ${ACCOUNT_LIMIT} -v ${VCPU_QUOTA} -r "${OSD_STAGING_1_OU_ROOT_ID}" -o "${OSD_STAGING_1_OU_BASE_ID}"
 
 ## 1.2 Workflow
 
-First, an AccountPool must be created to specify the number of desired accounts to be ready. The operator then goes and creates that number of accounts.
-When a [Hive](https://github.com/openshift/hive) cluster has a new cluster request, an AccountClaim is created with the name equal to the desired name of the cluster in a unique workspace. The operator links the AccountClaim to an Account in the pool, and creates the required k8s secrets, placing them in the AccountClaim's unique namespace. The AccountPool is then filled up again by the operator.  Hive then uses the secrets to create the AWS resources for the new cluster.
+First, an `AccountPool` must be created to specify the number of desired accounts to be ready. The operator then goes and creates the requested number of accounts.
+When a [Hive](https://github.com/openshift/hive) cluster has a new cluster request, an `AccountClaim` is created with the name equal to the desired name of the cluster in a unique workspace.
+The operator links the `AccountClaim` to an `Account` CR in the pool, and creates the required k8s secrets, placing them in the `AccountClaim`'s unique namespace.
+The `AccountPool` is then filled up again by the operator. Hive then uses the secrets to create the AWS resources for the new cluster.
 
-For more information on how this process is done, please refer to the controllers section.
+For more information on how this process is done, please refer to the [Controllers](3.0-Controllers.md) page.
 
 ## 1.3 Testing your AWS account credentials with the CLI
 
-The below commands can be used to test payer account credentials where we create new accounts inside the payer accounts organization. Once the account is created in the first step we wait until the account is created with step 2 and retrieve its account ID. Using the account ID we can then test our IAM user has sts:AssumeRole permissions to Assume the OrganizationAccountAccessRole in the new account. The OrganizationAccountAccessRole is created automatically when a new account is created under the organization.
+The commands below can be used to test payer account credentials where we create new accounts inside the payer accounts organization.
+Once the account is created in the first step, we wait until the account is created with step 2 and retrieve its account ID.
+Using the account ID we can then test our IAM user has `sts:AssumeRole` permissions to Assume the `OrganizationAccountAccessRole` in the new account.
+The `OrganizationAccountAccessRole` is created automatically when a new account is created under the organization.
 
-1. `aws organizations create-account --email "username+cli-test@redhat.com" --account-name "username-cli-test" --profile=orgtest`
-2. `aws organizations list-accounts --profile=orgtest | jq '.[][] | select(.Name=="username-cli-test")'`
-3. `aws sts assume-role --role-arn arn:aws:iam::<ID>:role/OrganizationAccountAccessRole --role-session-name username-cli-test --profile=orgtest`
+```
+aws organizations create-account --email "username+cli-test@redhat.com" --account-name "username-cli-test" --profile=orgtest
+
+aws organizations list-accounts --profile=orgtest | jq '.[][] | select(.Name=="username-cli-test")'
+
+aws sts assume-role --role-arn arn:aws:iam::<ID>:role/OrganizationAccountAccessRole --role-session-name username-cli-test --profile=orgtest
+```
 
 ## 1.4 Development
 
 It is recommended to let the operator know when you're running it for testing purposes.
 This has benefits such as skipping AWS support case creation.
-This is done by setting `FORCE_DEV_MODE` in the operator's environment.
-This is handled for you if you use one of the `make deploy-*` targets described below.
+This is done by setting the `FORCE_DEV_MODE` env var to `local` in the operator's environment.
+This is already handled for you if you use one of the `make deploy-*` targets described below.
 
 ## 1.5 Operator Install
 
-The operator can be installed into various cluster and pseudo-cluster environments. Depending which you choose, you can run in "local" mode or in "cluster" mode. The former is known to work in a Minishift or Code-Ready-Containers (CRC) cluster, or a private OpenShift cluster. The latter is known to work in a real OSD cluster. You can try to mix and match; it might work.
+The operator can be installed into various cluster and pseudo-cluster environments. Depending which you choose, you can run in `local` mode or in `cluster` mode.
+The local mode is known to work in a [Minishift](https://www.okd.io/minishift/) or [Code-Ready-Containers (CRC)](https://developers.redhat.com/products/codeready-containers/overview) cluster, and a private [OpenShift](https://www.openshift.com/) cluster.
+The latter is known to work in a real [OpenShift Dedicated](https://www.openshift.com/products/dedicated/) cluster.
 
-Both modes share predeployment steps. These can be done via `make predeploy`, which requires your access key credentials. You must be logged into the cluster as an administrator, or otherwise have permissions to create namespaces and deploy CRDs. For Minishift, this can be done:
+**Note:** You can try to mix and match; it might work.
+
+Both local and cluster modes share predeployment steps. These can be done via `make predeploy`, which requires your AWS access key credentials.
+You must be logged into the cluster as an administrator, or otherwise have permissions to create namespaces and deploy CRDs. For Minishift, this can be done:
 
 ```sh
 oc login -u system:admin
@@ -211,24 +234,25 @@ This does the following:
 - Ensures existence of the namespace in which the operator will run.
 - Installs the [credentials described above](#12-requirements).
 - Installs the operator's [Custom Resource Definitions](deploy/crds).
-- Creates an initially zero-size [accountpool CR](hack/files/aws.managed.openshift.io_v1alpha1_zero_size_accountpool.yaml).
+- Creates an initially zero-size [AccountPool CR](hack/files/aws.managed.openshift.io_v1alpha1_zero_size_accountpool.yaml).
 
 Predeployment only needs to be done once, unless you are modifying the above artifacts.
 
 ### 1.5.1 Local Mode
 
-"Local" development mode differs from production in the following ways:
+"Local" mode differs from production in the following ways:
 - AWS support case management is skipped. Your Accounts will get an artificial case number.
 - Metrics are served from your local system at http://localhost:8080/metrics
 
-On a local cluster, after [predeploying](#151-operator-install), running
+On a local cluster, after [predeploying](#151-operator-install), run
 
 ```sh
 make deploy-local
 ```
 
 will invoke the `operator-sdk` executable in `local` mode with the `FORCE_DEV_MODE=local` environment variable.
-(**Note:** This currently relies on `operator-sdk` at version 0.5.0. The syntax of the executable has changed over time, so this `make` target may not work with other versions.)
+
+**Note:** The operator relies on `operator-sdk` v0.16.0. The syntax of the executable has changed over time, so this `make` target may not work with other versions.
 
 ### 1.5.2 Cluster Mode
 
@@ -247,4 +271,4 @@ will do the following:
 
 **Note:** `make deploy-cluster` will deploy the development image created by the `make build` target. As you iterate, you will need to `make build` and `make push` each time before you `make deploy-cluster`.
 
-As with local mode, you must be logged into the cluster as an administrator, or otherwise have permissions to create namespaces and deploy CRDs.
+As with local mode, you **must** be logged into the cluster as an administrator, or otherwise have permissions to create namespaces and deploy CRDs.
