--- a/docs/3.0-Controllers.md
+++ b/docs/3.0-Controllers.md
@@ -2,9 +2,9 @@
 
 ## 3.1. AccountPool Controller
 
-The accountpool-controller is triggered by a create or change to an accountpool CR or an account CR. It is responsible for filling the Acccount Pool by generating new account CRs.
+The `AccountPool` controller is triggered by a create or change operation to an `AccountPool` CR or an `Account` CR. It is responsible for filling the `AccountPool` by generating new `Account` CRs.
 
-It looks at the accountpool CR *spec.poolSize* and it ensures that the number of unclaimed accounts matches the number of the poolsize. If the number of unclaimed accounts is less then the poolsize it creates a new account CR for the account-controller to process.
+The controller looks at the desired `AccountPool` CR `spec.poolSize` and it ensures that the number of unclaimed accounts matches the number of the defined poolsize. If the number of unclaimed accounts is less than the poolsize it creates a new `Account` CR for the `Account` controller to process.
 
 ### 3.1.1. Constants and Globals
 
@@ -22,15 +22,13 @@ Updates accountPool CR
   unclaimedAccounts: 3
 ```
 
-*claimedAccounts* are any accounts with the `status.Claimed=true`
-
-*unclaimedAccounts* are any accounts with `status.Claimed=false` and `status.State!="Failed"`.
-
-*poolSize* is the poolsize from the accountPool spec
+* `claimedAccounts` are any accounts with the `status.Claimed=true`.
+* `unclaimedAccounts` are any accounts with `status.Claimed=false` and `status.State!="Failed"`.
+* `poolSize` is the poolsize from the `AccountPool` spec.
 
 ### 3.1.3. Metrics
 
-Updated in the accountPool-controller
+Updated in the AccountPool controller:
 
 ```txt
 MetricTotalAccountCRs
@@ -44,30 +42,30 @@ MetricTotalAccountClaimCRs
 
 ## 3.2. Account Controller
 
-The account-controller is triggered by creating or changing an account CR. It is responsible for following behaviors:
+The `Account` controller is triggered by creating or changing an `Account` CR. It is responsible for the following behaviors:
 
-If the *awsLimit* set in the constants is not exceeded:
+If the **awsLimit** set in the constants is not exceeded:
 
 1. Creates a new account in the organization belonging to credentials in secret `aws-account-operator-credentials`
-2. Configures two AWS IAM users from *iamUserNameUHC* and *iamUserNameSRE* as their respective usernames
+2. Configures two AWS IAM users from `iamUserNameUHC` and `iamUserNameSRE` as their respective usernames
     - Creates IAM user in new account
     - Attaches Admin policy
     - Generates a secret access key for the user
-    - Stores user secret in a AWS secret
+    - Stores user secret in an AWS secret
 3. Creates STS CLI tokens
-    - Creates Federated webconsole URL using the *iamUserNameSRE* user
+    - Creates Federated web console URL using the `iamUserNameSRE` user
 4. Creates and Destroys EC2 instances
-5. Creates aws support case to increase account limits
+5. Creates AWS support case to increase account limits
 
 **Note:**
-*iamUserNameUHC* is used by Hive to provision clusters
-*iamUserNameSRE* is used to generate Federated console URL
+* `iamUserNameUHC` is used by Hive to provision clusters
+* `iamUserNameSRE` is used to generate Federated console URL
 
 ### 3.2.1. Additional Functionality
 
-- If `status.RotateCredentials == true` the account-controller will refresh the STS Cli Credentials
-- If the account's `status.State == "Creating"` and the account is older then the *createPendTime* constant the account will be put into a `failed` state
-- If the account's `status.State == AccountReady && spec.ClaimLink != ""` it sets `status.Claimed = true`
+- If `status.RotateCredentials == true` the account-controller will refresh the STS Cli Credentials.
+- If the account's `status.State == "Creating"` and the account is older than the `createPendTime` constant the account will be put into a `failed` state.
+- If the account's `status.State == AccountReady && spec.ClaimLink != ""` it sets `status.Claimed = true`.
 
 ### 3.2.2. Constants and Globals
 
@@ -133,15 +131,13 @@ spec:
   iamUserSecret: accountName-secret
 ```
 
-*awsAccountID* is updated with the account ID of the aws account that is created by the account controller
-
-*claimLink* holds the name of the accountClaim that has claimed this account CR
-
-*iamUserSecret* holds the name of the secret containing IAM user credentials for the AWS account
+* `awsAccountID` is updated with the account ID of the AWS account that is created by the `Account` controller.
+* `claimLink` holds the name of the `AccountClaim` that has claimed this `Account` CR.
+* `iamUserSecret` holds the name of the secret containing IAM user credentials for the AWS account.
 
 ### 3.2.4. Status
 
-Updates the Account CR
+Updates the Account CR:
 
 ```yaml
 status:
@@ -158,18 +154,18 @@ status:
   supportCaseID: "00000000"
 ```
 
-*state* can be any f the account states defined in the constants below:
+**state** can be any of the account states defined in the constants below:
 
-- AccountPending indicates an account is pending
-- AccountCreating indicates an account is being created
-- AccountFailed indicates account creation has failed
-- AccountReady indicates account creation is ready
-- AccountPendingVerification indicates verification (of AWS limits and Enterprise Support) is pending
+- `AccountPending` indicates an account is pending.
+- `AccountCreating` indicates an account is being created.
+- `AccountFailed` indicates account creation has failed.
+- `AccountReady` indicates account creation is ready.
+- `AccountPendingVerification` indicates verification (of AWS limits and Enterprise Support) is pending.
 
-*claimed* is true if `currentAcctInstance.Status.State == AccountReady && currentAcctInstance.Spec.ClaimLink != "`
-*rotateCredentials* updated by the secretwatcher pkg which will set the bool to true triggering an reconcile of this controller to rotate the STS credentials
-*supportCaseID* is the ID of the aws support case to increase limits
-*conditions* indicates the last state the account had and supporting details
+* `claimed` is true if `currentAcctInstance.Status.State == AccountReady && currentAcctInstance.Spec.ClaimLink != "`
+* `rotateCredentials` updated by the secretwatcher pkg which will set the bool to true triggering an reconcile of this controller to rotate the STS credentials.
+* `supportCaseID` is the ID of the aws support case to increase limits
+`conditions` indicates the last state the account had and supporting details.
 
 ### 3.2.5. Metrics
 
@@ -181,14 +177,39 @@ MetricTotalAWSAccounts
 
 ## 3.3. AccountClaim Controller
 
-The accountClaim-controller is triggered when an accountClaim is created in any namespace. It is responsible for following behaviours:
+The `AccountClaim` controller is triggered when an `AccountClaim` CR is created in any namespace. It is responsible for the following behaviors:
 
-1. Sets account `spec.ClaimLink` to the name of the accountClaim
-2. Sets accountClaim `spec.AccountLink` to the name of an unclaimed Account
-3. Creates a secret in the accountClaim namespace that contains the credentials tied to the aws account in the accountCR
-4. Sets accountClaim `status.State = "Ready"`
+1. Sets account `spec.ClaimLink` to the name of the `AccountClaim`
+2. Sets `AccountClaim` `spec.AccountLink` to the name of an unclaimed Account
+3. Creates a secret in the `AccountClaim` namespace that contains the credentials tied to the aws account in the `Account` CR
+4. Sets `AccountClaim` `status.State = "Ready"`
+5. Delinks `AccountClaim ` from  and`Account` to enable the Account to be reused (non-CCS cases)
+6. Cleans up the AWS resources when an `AccountClaim` is delinked
 
-### 3.3.1. Constants and Globals
+### 3.3.1. Reuse/Cleanup Workflow
+
+An `Account` can come either from the reused pool (it's going to be there for a long time, that's why you see old AGE) or be a new account that is part of the `AccountPool`.
+The first time we assign an account to this `AccountClaim`, we copy the `legalEntity` from the `AccountClaim` CR to the `Account` CR.
+From now on, this `Account` is marked with that specific `legalEntity` id, and it does not go away when we delete the cluster.
+
+It will go away only when we do a cleanup of accounts. So, the reuse workflow reuses accounts from the same legalEntity id.
+We do not want an external customer to use an account, delete it, and then this account gets assigned to another cluster for another customer.
+Consequently, for security reasons, we reuse accounts only from the same legal entity id.
+
+The following diagram illustrates how the `AccountClaim` controller does the reuse and cleanup of resources.
+
+![Operator Reuse Cleanup Workflow](images/reuse-cleanup-workflow.png)
+
+As you can see in the diagram, depending on the environment (CCS/Non-CCS) it performs differently. Red Hat OpenShift Dedicated (OSD) provides a [Customer Cloud Subscription (CCS)](https://www.openshift.com/dedicated/ccs) model that allows Red Hat to deploy and manage OpenShift Dedicated into a customer's AWS account. Reuse does not apply to CCS environments since we cannot reuse the `Account`s of the customers. It's their environment, and they own the payer account.
+However, in non-CCS environments that Red Hat manages, the `Account`s can be reused.
+
+When an `AccountClaim` CR is being deleted, the `AccountClaim` CR either deletes the `Account` CR in a CCS environment or delinks the `AccountClaim` and lets the `Account` CR be reused in a non-CCS environment.
+
+During reconciliation, after an `AccountClaim` CR is deleted, the controller also cleans up the resources in Amazon Web Services.
+In the case of CCS environments, it deletes the IAM resources, while in non-CCS environments, it cleans up resources such as EBS Snapshots, S3 Buckets, and Route53 entries.
+
+
+### 3.3.2. Constants and Globals
 
 ```go
 AccountClaimed          = "AccountClaimed"
@@ -198,9 +219,9 @@ awsCredsAccessKeyID     = "aws_access_key_id"
 awsCredsSecretAccessKey = "aws_secret_access_key"
 ```
 
-### 3.3.2. Spec
+### 3.3.3. Spec
 
-Updates the accountClaim CR
+Updates the `AccountClaim CR`:
 
 ```yaml
 spec:
@@ -216,11 +237,11 @@ spec:
     name: {Legal Entity Name}
 ```
 
-*awsCredentialSecret* holds the name and namespace of the secret with the credentials created for the accountClaim
+* `awsCredentialSecret` holds the name and namespace of the secret with the credentials created for the `AccountClaim`.
 
-### 3.3.3. Status
+### 3.3.4. Status
 
-Updates the accountClaim CR
+Updates the `AccountClaim` CR
 
 ```yaml
 status:
@@ -240,25 +261,25 @@ status:
     state: Ready
 ```
 
-*state* can be any of the ClaimStatus strings defined in accountclaim_types.go
-*conditions* indicates the last state the account had and supporting details
+* `state` can be any of the ClaimStatus strings defined in [accountclaim_types.go](https://github.com/openshift/aws-account-operator/blob/master/pkg/apis/aws/v1alpha1/accountclaim_types.go#L84)
+* `conditions` indicates the last state the account had and supporting details
 
-### 3.3.4. Metrics
+### 3.3.5. Metrics
 
-Updated in the accountClaim-controller
+Updated in the `AccountClaim` controller:
 
 ```txt
 MetricTotalAccountClaimCRs
 ```
 ## 3.4 AWSFederatedRole Controller
 
-The AWSFederatedRole-controller is triggered when an AWSFederatedRoke is created in any namespace. It is responsible for following behaviours:
+The `AWSFederatedRole` controller is triggered when an [`AWSFederatedRole`](https://aws.amazon.com/identity/federation/) is created in any namespace. It is responsible for the following behaviors:
 
-1. Building AWS Policy Doc from Role definition in the spec
-2. Attempting to validate the Role in AWS by creating the Role, and deleting it if successful
-3. Setting the status to Valid or Failed
-4. If the status is Valid or Failed, stop all reconciling
-5. If an AWSFederatedRole is deleted, cleaning up any instance of the Role in AWS by cleaning up any AWSFederatedAccountAccesses using the AWSFederatedRole 
+1. Building AWS `Policy` Doc from `Role` definition in the spec.
+2. Attempting to validate the Role in AWS by creating the `Role`, and deleting it if successful.
+3. Setting the status to `Valid` or `Failed`.
+4. If the status is `Valid` or `Failed`, stop all reconciling.
+5. If an `AWSFederatedRole` is deleted, cleaning up any instances of the Role in AWS by cleaning up any `AWSFederatedAccountAccesses` using the `AWSFederatedRole`.
 
 ### 3.4.1. Constants and Globals
 
@@ -280,7 +301,7 @@ spec:
         action:
         - "aws-portal:ViewAccount"
         - "aws-portal:ViewBilling"
-        resource: 
+        resource:
         - "*"
   # list of  AWS managed
   awsManagedPolicies:
@@ -289,13 +310,10 @@ spec:
    - "AmazonS3ReadOnlyAccess"
    - "IAMReadOnlyAccess"
 ```
-*roleDisplayName* is a human-readable name for the Role
-*roleDescription* is a human-readable description for what the Role does
-*awsCustomPolicy* is a representation of an AWS Policy to be created as part of the Role. It contains a Policy name a description,
-and a list of AWS Statements which Allow or Deny specific actions on specific resources. Please refer to the following documentation
-for more information: https://docs.aws.amazon.com/IAM/latest/UserGuide/access_policies.html
-*awsManagedPolicies* is a list of AWS pre-defined policies to add to the Role. Please refer to the following documentation for more information: https://docs.aws.amazon.com/IAM/latest/UserGuide/access_policies_managed-vs-inline.html#aws-managed-policies
-
+* `roleDisplayName` is a human-readable name for the Role.
+* `roleDescription` is a human-readable description of what the Role does.
+* `awsCustomPolicy` is a representation of an [AWS Policy](https://docs.aws.amazon.com/IAM/latest/UserGuide/access_policies.html) to be created as part of the Role. It contains a Policy name, a description, and a list of AWS Statements which `Allow` or `Deny` specific actions on specific resources.
+* `awsManagedPolicies` is a list of [AWS pre-defined policies](https://docs.aws.amazon.com/IAM/latest/UserGuide/access_policies_managed-vs-inline.html#aws-managed-policies) to add to the Role.
 
 ### 3.4.3. Status
 ```yaml
@@ -309,8 +327,8 @@ for more information: https://docs.aws.amazon.com/IAM/latest/UserGuide/access_po
   state: Valid
 ```
 
-*conditions* indicates the last states the AWSFederatedRole had and supporting details. In general for AWSFederatedRoles, only one condition is expected, and it should match the state.
-*state* is the current state of the CR. Possible values are Valid and Failed
+* `conditions` indicates the last states the `AWSFederatedRole` had and supporting details. In general, for `AWSFederatedRoles`, only one condition is expected, and it should match the state.
+* `state` is the current state of the CR. Possible values are `Valid` and `Failed`.
 
 ### 3.4.4. Metrics
 
@@ -318,13 +336,13 @@ None
 
 ## 3.5 AWSFederatedAccountAccess Controller
 
-The AWSFederatedAccountAccess-controller is triggered when an accountClaim is created in any namespace. It is responsible for following behaviours:
+The `AWSFederatedAccountAccess` controller is triggered when an `AccountClaim` is created in any namespace. It is responsible for the following behaviors:
 
-1. Ensures the requested AWSFederatedRole exists
-2. Converts the AWSFederatedRole spec into an AWS Policy Doc
-3. Creates a unique AWS Role in the AWS containing the OSD cluster using the AWSFederatedRole definition
-4. Creates a unique AWS Policy if the AWSFederatedRole has awsCustomPolicy defined and attaches it to the Role
-5. Attaches any specified AWS Managed Policies to the Role
+1. Ensures the requested `AWSFederatedRole` exists.
+2. Converts the `AWSFederatedRole` spec into an AWS `Policy` Doc.
+3. Creates a unique AWS `Role` in the AWS containing the OSD cluster using the `AWSFederatedRole` definition.
+4. Creates a unique AWS `Policy` if the `AWSFederatedRole` has `awsCustomPolicy` defined and attaches it to the Role.
+5. Attaches any specified AWS Managed Policies to the `Role`.
 
 ### 3.5.1. Constants and Globals
 
@@ -334,21 +352,21 @@ None
 
 ```yaml
 spec:
-  awsCustomerCredentialSecret: 
-    name: {Name for secret with osdManagedAdmin credentials} 
+  awsCustomerCredentialSecret:
+    name: {Name for secret with osdManagedAdmin credentials}
     namespace: {Namespace for the secret with osdManagedAdmin credentials}
   externalCustomerAWSIAMARN: arn:aws:iam::${EXTERNAL_AWS_ACCOUNT_ID}:user/${EXTERNAL_AWS_IAM_USER}
   awsFederatedRole:
     name: {Name of desired AWSFederatedRole}
-    namespace: aws-account-operator  
+    namespace: aws-account-operator
 ```
 
-*awsCustomerCredentialSecret* is the secret reference for the osdManagedAdmin IAM user in the AWS account where OSD is installed
-*externalCustomerAWSIAMARN* is the AWS ARN for the desired IAM user that will use the AWS role when created. This should be in an AWS account external to the one where OSD is installed
-*awsFederatedRole* is the reference to the target AWSFederatedRole CR to create an instance of 
+* `awsCustomerCredentialSecret` is the secret reference for the osdManagedAdmin IAM user in the AWS account where OSD is installed
+* `externalCustomerAWSIAMARN` is the AWS ARN for the desired IAM user that will use the AWS role when created. This should be in an AWS account external to the one where OSD is installed.
+* `awsFederatedRole` is the reference to the target `AWSFederatedRole` CR to create an instance of.
 
 ### 3.5.3. Status
- 
+
 ```yaml
 status:
   conditions:
@@ -362,9 +380,9 @@ status:
   state: Ready
 ```
 
-*conditions* indicates the states the AWSFederatedAccountAccess had and supporting details
-*consoleURL* is a generated URL that directly allows the targeted IAM user to access the AWS Role
-*state* is the current state of the CR
+* `conditions` indicates the states the `AWSFederatedAccountAccess` had and supporting details
+* `consoleURL` is a generated URL that directly allows the targeted IAM user to access the AWS `Role`
+* `state` is the current state of the CR
 
 ### 3.4.4. Metrics
 
