improve STS related docs

--- a/docs/1.0-Installation.md
+++ b/docs/1.0-Installation.md
@@ -160,6 +160,7 @@ The operator also needs a ConfigMap that has:
 * `account-limit`: The soft limit of AWS accounts which is the number compared against when creating new accounts
 * `base`: Base [OU](https://docs.aws.amazon.com/organizations/latest/userguide/orgs_manage_ous.html) ID to place accounts in when claimed
 * `root`: Root [OU](https://docs.aws.amazon.com/organizations/latest/userguide/orgs_manage_ous.html) ID to create new OUs under
+* `sts-jump-role`: [ARN](https://docs.aws.amazon.com/general/latest/gr/aws-arns-and-namespaces.html) from the Jump Role created above
 
 
 
@@ -175,13 +176,13 @@ The operator also needs a ConfigMap that has:
     "kind": "ConfigMap",
     "metadata": {
         "name": "aws-account-operator-configmap",
-        "namespace": "aws-account-operator",
+        "namespace": "aws-account-operator"
     }
 }
 ```
 The ConfigMap could be generated and deployed with the `hack/scripts/set_operator_configmap.sh` script.
 
-    .hack/scripts/set_operator_configmap.sh -a ${ACCOUNT_LIMIT} -v ${VCPU_QUOTA} -r "${OSD_STAGING_1_OU_ROOT_ID}" -o "${OSD_STAGING_1_OU_BASE_ID}"
+    .hack/scripts/set_operator_configmap.sh -a ${ACCOUNT_LIMIT} -v ${VCPU_QUOTA} -r "${OSD_STAGING_1_OU_ROOT_ID}" -o "${OSD_STAGING_1_OU_BASE_ID}" -s ${STS_JUMP_ARN}
 
 ## 1.2 Workflow
 
