--- a/docs/1.0-Installation.md
+++ b/docs/1.0-Installation.md
@@ -1,188 +1,23 @@
 # 1.0 Installation
 
-### 1.0.1 - Glossary
+Quick Access:
+- [1.0 Installation](#10-installation)
+  - [1.1 - Prerequisites](#11---prerequisites)
+  - [1.2 Workflow](#12-workflow)
+  - [1.3 Testing your AWS account credentials with the CLI](#13-testing-your-aws-account-credentials-with-the-cli)
+  - [1.4 Development](#14-development)
+  - [1.5 Operator Install](#15-operator-install)
+    - [1.5.1 Local Mode](#151-local-mode)
+    - [1.5.2 Cluster Mode](#152-cluster-mode)
 
-Terms used in this guide and what they mean for this guide:
 
-* Payer Account - AWS Organizations give you a "unified bill" so to speak under a single account. Sub accounts are created under this "Payer Account", which is the highest-level account in this organization. SREs all should also have an IAM user with credentials on each payer account, which has AssumeRole Permissions as administrator into each of these sub-accounts.
-* Jump Role - Using AWS Assume-Role Chaining, a Jump Role is an intermediary role that sits between a given IAM user and a customer's access role, providing a single point of entry.
-* Access Role - A role inside the cluster's account that we assume to perform tasks.
 
 ## 1.1 - Prerequisites
+Please ensure you have completed all necessary prerequisite steps before moving onto the Workflow Section below.
 
-### 1.1.1 - IAM User and Secret
+[All required prerequisites steps can be found in this section.](1.1-InstallationPrerequisites.md)
 
-The operator requires a secret named `aws-account-operator-credentials` in the `aws-account-operator` namespace, containing credentials to the AWS payer account you wish to create accounts in. The payer account is the root account in an organization and can create linked accounts and manage them.
-
-The secret should contain credentials for an IAM user in the payer account with the data fields `aws_access_key_id` and `aws_secret_access_key`.
-
-The user should have the following IAM permissions:
-
-Permissions to allow the user to assume the `OrganizationAccountAccessRole` role in any account created:
-
-```json
-{
-   "Version": "2012-10-17",
-   "Statement": {
-       "Effect": "Allow",
-       "Action": "sts:AssumeRole",
-       "Resource": "arn:aws:iam::*:role/OrganizationAccountAccessRole"
-   }
-}
-
-```
-
-Permissions to allow the user to interact with the support center:
-
-```json
-{
-    "Version": "2012-10-17",
-    "Statement": [
-        {
-            "Effect": "Allow",
-            "Action": [
-                "support:*"
-            ],
-            "Resource": "*"
-        }
-    ]
-}
-
-```
-
-Once the user has been configured, you can deploy the secret by exporting the access key and secret to the env variables listed below, and then, running `make deploy-aws-account-operator-credentials`:
-
-```
-OPERATOR_ACCESS_KEY_ID
-OPERATOR_SECRET_ACCESS_KEY
-```
-
-Alternatively, if you have the credentials stored in your `~/.aws/credentials` file, you can use the script in `hack/scripts/set_operator_credentials.sh` to create the secret from that profile:
-
-    .hack/scripts/set_operator_credentials.sh my-aws-profile
-
-### 1.1.2 AWS Accounts
-
-As you're working on the operator you should have two accounts dedicated for your use of this operator, under each of the osd-staging payer accounts.  Work with your manager or functional team lead to figure out what these account numbers are and save them, you'll need them later.
-
-### 1.1.3 STS Roles
-
-To run the operator tests for STS mode you will need to create two roles &mdash; one in each of the AWS accounts you have been assigned.  The name of these roles doesn't matter when you create it, however you will need to know the ARN of both in order to configure the operator to use them.
-
-#### 1.1.3.1 - Jump Role
-
-The Jump Role will be a simulation of the role that we use as a bastion of sorts. For the STS Architecture, we have an IAM user that assumes a specific role in a specific account, and then using that role they can assume role into the cluster's account in order to run operations as necessary.
-
-You will need to create this jump role in the first osd-staging aws account assigned to you. You will need to add your Payer Account IAM user credentials as the the Principal in the Trust Relationship. This user should also be the same user that you use to create the AWS Account Operator credentials.
-
-The Jump role should only require the permissions to assume-roles.  No other permissions should be necessary. You will probably need to create the IAM policy first before the Role.
-
-Example Assume Role Policy:
-```
-{
-    "Version": "2012-10-17",
-    "Statement": [
-        {
-            "Effect": "Allow",
-            "Action": "sts:AssumeRole",
-            "Resource": "*"
-        }
-    ]
-}
-```
-
-Example Trust Relationship for role:
-```
-{
-    "Version": "2012-10-17",
-        "Statement": [
-        {
-            "Effect": "Allow",
-            "Principal": {
-                "AWS": "arn:aws:iam::[payer-account-id]:user/[your-username]"
-            },
-            "Action": "sts:AssumeRole",
-            "Condition": {}
-        }
-        ]
-}
-```
-
-You will need to put the ARN for this jump role into the Operator Config Map created later.
-
-#### 1.1.3.2 - Access Role
-
-The Access Role will be a simulation of a role on a customer's account that gives us access to initalize the regions and initialize a cluster.  On external customer accounts this is assumed to be a very locked-down role with ONLY the necessary permissions needed to run the operator or install the cluster resources. Minimal permissions required for the role are provided below.
-
-Example Trust Relationship:
-```
-{
-  "Version": "2012-10-17",
-  "Statement": [
-    {
-      "Effect": "Allow",
-      "Principal": {
-        "AWS": "arn:aws:iam::[jump-role-account-id]:role/[jump-role-name]"
-      },
-      "Action": "sts:AssumeRole",
-      "Condition": {}
-    }
-  ]
-}
-```
-
-Example minimal permissions Policy Document
-```
-{
-  "Version": "2012-10-17",
-  "Statement": [
-    {
-      "Effect": "Allow",
-      "Action": [
-        "ec2:RunInstances",
-        "ec2:TerminateInstances",
-        "ec2:DescribeInstanceStatus",
-        "ec2:CreateTags",
-        "ec2:DeleteTags"
-      ],
-      "Resource": "*"
-    }
-  ]
-}
-```
-
-You will need to put the ARN for this access role into your environment in order for this to be used to create accountclaims within the make tests.
-
-### 1.1.3 Config Map
-
-The operator also needs a ConfigMap that has:
-
-* `account-limit`: The soft limit of AWS accounts which is the number compared against when creating new accounts
-* `base`: Base [OU](https://docs.aws.amazon.com/organizations/latest/userguide/orgs_manage_ous.html) ID to place accounts in when claimed
-* `root`: Root [OU](https://docs.aws.amazon.com/organizations/latest/userguide/orgs_manage_ous.html) ID to create new OUs under
-* `sts-jump-role`: [ARN](https://docs.aws.amazon.com/general/latest/gr/aws-arns-and-namespaces.html) from the Jump Role created above
-
-
-
-```json
-{
-    "apiVersion": "v1",
-    "data": {
-        "account-limit": "4801",
-        "base": "ou-0wd6-tmsbvahq",
-        "root": "r-0wd6",
-        "sts-jump-role": "[arn from the jump role created above]"
-    },
-    "kind": "ConfigMap",
-    "metadata": {
-        "name": "aws-account-operator-configmap",
-        "namespace": "aws-account-operator"
-    }
-}
-```
-The ConfigMap could be generated and deployed with the `hack/scripts/set_operator_configmap.sh` script.
-
-    .hack/scripts/set_operator_configmap.sh -a ${ACCOUNT_LIMIT} -v ${VCPU_QUOTA} -r "${OSD_STAGING_1_OU_ROOT_ID}" -o "${OSD_STAGING_1_OU_BASE_ID}" -s ${STS_JUMP_ARN}
+Please utilise the [Glossary](0.1-Glossary.md) for any terms or acronyms found in this documentation which you may find unclear. 
 
 ## 1.2 Workflow
 
@@ -191,11 +26,11 @@ When a [Hive](https://github.com/openshift/hive) cluster has a new cluster reque
 The operator links the `AccountClaim` to an `Account` CR in the pool, and creates the required k8s secrets, placing them in the `AccountClaim`'s unique namespace.
 The `AccountPool` is then filled up again by the operator. Hive then uses the secrets to create the AWS resources for the new cluster.
 
-For more information on how this process is done, please refer to the [Controllers](3.0-Controllers.md) page.
+For more information on how this process is done, please refer to the [Custom Resources and Controllers](2.0-Custom-Resources-and-Controllers.md) page.
 
 ## 1.3 Testing your AWS account credentials with the CLI
 
-The commands below can be used to test payer account credentials where we create new accounts inside the payer accounts organization.
+The commands below can be used to test `Payer Account` credentials where we create new accounts inside the `Payer Account`s organization.
 Once the account is created in the first step, we wait until the account is created with step 2 and retrieve its account ID.
 Using the account ID we can then test our IAM user has `sts:AssumeRole` permissions to Assume the `OrganizationAccountAccessRole` in the new account.
 The `OrganizationAccountAccessRole` is created automatically when a new account is created under the organization.
@@ -245,7 +80,7 @@ Predeployment only needs to be done once, unless you are modifying the above art
 - AWS support case management is skipped. Your Accounts will get an artificial case number.
 - Metrics are served from your local system at http://localhost:8080/metrics
 
-On a local cluster, after [predeploying](#151-operator-install), run
+On a local cluster, after [predeploying](#15-operator-install), run
 
 ```sh
 make deploy-local
@@ -260,7 +95,7 @@ will invoke the `operator-sdk` executable in `local` mode with the `FORCE_DEV_MO
 In "cluster" development mode, as in local mode, AWS support case management is skipped.
 However, metrics are served from within the cluster just as they are in a production deployment.
 
-Once logged into the cluster, after [predeploying](#151-operator-install), running
+Once logged into the cluster, after [predeploying](#15-operator-install), running
 
 ```sh
 make deploy-cluster
