--- a/docs/4.0-Special-Items-Main-Go.md
+++ b/docs/4.0-Special-Items-Main-Go.md
@@ -1,4 +1,4 @@
-# Special Items in main.go
+# 4.0 Special Items in main.go
 
 - Starts a metric server with custom metrics defined in `localmetrics` pkg
 
