--- a/docs/1.1-InstallationPrerequisites.md
+++ b/docs/1.1-InstallationPrerequisites.md
@@ -182,6 +182,10 @@ Example minimal permissions Policy Document
 ```
 **Note:** You will need to put the ARN for this `Access Role` into your environment variable, `STS_ROLE_ARN`, in order for this to be used to create accountclaims within the make tests.
 
+### 1.1.3.4 STS Role Validation
+
+Making sense of the STS role chaining process can be confusing at first, so we've added a script to validate that the role chaining works before you try to run it through the operator. The script is located in the `hack/scripts/aws` directory, but for convenience you can run it from the make target: `make check-sts-setup`
+
 ### 1.1.4 Config Map
 
 The operator needs a ConfigMap that has the following fields configured:
