--- a/docs/0.1-Glossary.md
+++ b/docs/0.1-Glossary.md
@@ -1,5 +1,5 @@
 
-# 0.1 Glossary
+# Glossary
 This glosary is intended to catalogue and define all terms used in our documentation which may not be evident to new users of the operator.
 
 By extension of this glossary, we may also use terms from the following glossaries:
