--- a/docs/1.1-InstallationPrerequisites.md
+++ b/docs/1.1-InstallationPrerequisites.md
@@ -140,7 +140,7 @@ You will need to note the `ARN` for this `Jump Role` as it's required for the ne
 
 #### 1.1.3.2 - Access Role
 
-The `Access Role` will be a simulation of a role on a customer's account that gives us access to initalize the regions and initialize a cluster.  On external customer accounts this is assumed to be a very locked-down role with ONLY the necessary permissions needed to run the operator or install the cluster resources. Minimal permissions required for the role are provided below.
+The `Access Role` will be a simulation of a role on a customer's account that gives us access to initialize the regions and initialize a cluster.  On external customer accounts this is assumed to be a very locked-down role with ONLY the necessary permissions needed to run the operator or install the cluster resources. Minimal permissions required for the role are provided below.
 
 Create a new `Role` for this account, similarly to how the role was created for the `Jump Role`, but instead of pointing to the `Payer Account` ID, point at the Account ID belonging to `Account 1`, ie. the Account with the Jump Role. 
 
