[OSD-3574] remove osdManagedAdminSRE user and secret

--- a/docs/2.2-Account.md
+++ b/docs/2.2-Account.md
@@ -23,19 +23,17 @@ The `Account` controller is triggered by creating or changing an `Account` CR. I
 If the **awsLimit** set in the constants is not exceeded:
 
 1. Creates a new account in the organization belonging to credentials in secret `aws-account-operator-credentials`
-2. Configures two AWS IAM users from `iamUserNameUHC` and `iamUserNameSRE` as their respective usernames
+2. Configures two AWS IAM users from `iamUserNameUHC` as their respective username
     - Creates IAM user in new account
     - Attaches Admin policy
     - Generates a secret access key for the user
     - Stores user secret in an AWS secret
 3. Creates STS CLI tokens
-    - Creates Feder3.1.3. ated web console URL using the `iamUserNameSRE` user
 4. Creates and Destroys EC2 instances
 5. Creates AWS support case to increase account limits
 
 **Note:**
 * `iamUserNameUHC` is used by Hive to provision clusters
-* `iamUserNameSRE` is used to generate Federated console URL
 
 #### Additional Functionality
 
@@ -47,7 +45,6 @@ If the **awsLimit** set in the constants is not exceeded:
 
 ```go
 iamUserNameUHC          = "osdManagedAdmin"
-iamUserNameSRE          = "osdManagedAdminSRE"
 awsSecretName           = "aws-account-operator-credentials"
 awsInstanceType         = "t2.micro"
 createPendTime          = 10 * time.Minute
