--- a/docs/1.1-InstallationPrerequisites.md
+++ b/docs/1.1-InstallationPrerequisites.md
@@ -48,7 +48,7 @@ Permissions to allow the user to interact with the support center:
 
 ```
 
-Once the user has been configured, you can deploy the secret by exporting the access key and secret to the env variables listed below, and then, running `make deploy-aws-account-operator-credentials`:
+Once the user has been configured, you can deploy the secret by exporting the access key and secret of osd-staging-1 to the env variables listed below, and then, running `make deploy-aws-account-operator-credentials`:
 
 ```
 OPERATOR_ACCESS_KEY_ID
