--- a/docs/2.0-Development.md
+++ b/docs/2.0-Development.md
@@ -72,7 +72,7 @@ To run the test suite defined within the `Makefile` against your cluster, run:
 make test-all
 ```
 
-`make test-all` combines a number of test suites together to make things easier to validate the state of the cluster. If prefered, indivual test suites can be run, such as:
+`make test-all` combines a number of test suites together to make things easier to validate the state of the cluster. If preferred, individual test suites can be run, such as:
 ```
 make test-account-creation 
 make test-ccs 
