Applied code review changes

--- a/docs/1.2-ManualSTSSetup.md
+++ b/docs/1.2-ManualSTSSetup.md
@@ -1,4 +1,7 @@
-#### 1.1.3.1 - Jump Role
+## 1.2 - Manual STS Setup
+STS (Security Token Service) is a web service that enables you to request temporary, limited-privilege credentials for AWS Identity and Access Management (IAM) users or for users that you authenticate. Below are the steps involved in setting up your accounts manually to allow for STS testing. We've provided a script and background info [here](1.1-InstallationPrerequisites.md#113-sts-roles) which handle all of the steps below for you automatically, but have maintained the section below as a detailed explanation of the steps taken by the script.
+
+### 1.2.1 - Jump Role
 
 The `Jump Role` will be a simulation of the role that we use as a bastion of sorts. For the STS Architecture, we have an IAM user that assumes a specific role in a specific account, and then using that role they can assume role into the cluster's account in order to run operations as necessary.
 
@@ -40,7 +43,7 @@ Next required step is to update the `Trust Relationship` for the `Role`. To do s
 ```
 You will need to note the `ARN` for this `Jump Role` as it's required for the next step, setting up the `Access Role`.
 
-**Note:** You will need to put the ARN for this `Jump Role` into the Operator Config Map created later - in the `STS_JUMP_ARN` environment variable.
+**Note:** You will need to put the ARN for this `Jump Role` into the Operator Config Map created later - in the `STS_JUMP_ARN` and `STS_JUMP_ROLE` environment variables.
 
 **Note 2:** Make sure your iam user in the `Payer Account` has sufficient permissions to assume the role. To do so, log in to your `Payer Account` again and go to `AWS Console > IAM > Users > [Username] > + Add inline policy`. Click on `JSON` and paste the following policy json:
 
@@ -67,7 +70,7 @@ $> aws sts assume-role --role-arn ${STS_JUMP_ARN} --role-session-name "STSCredsC
 ...
 ```
 
-#### 1.1.3.2 - Access Role
+### 1.2.2 - Access Role
 
 The `Access Role` will be a simulation of a role on a customer's account that gives us access to initialize the regions and initialize a cluster.  On external customer accounts this is assumed to be a very locked-down role with ONLY the necessary permissions needed to run the operator or install the cluster resources. Minimal permissions required for the role are provided below.
 
@@ -81,7 +84,7 @@ Once created, the `Role`'s `Trust Relationship` will need to be updated with the
     {
       "Effect": "Allow",
       "Principal": {
-        "AWS": "arn:aws:iam::[jump-role-account-id]:role/[jump-role-name]"
+        "AWS": "arn:aws:iam::[assigned-osd-staging-1-account]:role/[jump-role-name]"
       },
       "Action": "sts:AssumeRole",
       "Condition": {}
