--- a/docs/3.1-AccountPool.md
+++ b/docs/3.1-AccountPool.md
@@ -44,7 +44,7 @@ Updates accountPool CR
 * `claimedAccounts` are any accounts with the `status.Claimed=true`.
 * `unclaimedAccounts` are any accounts with `status.Claimed=false` and `status.State!="Failed"`.
 * `poolSize` is the poolsize from the `AccountPool` spec.
-* `availableAccounts` is the amount of accounts that have NEVER been claimed AND are READY to be claimed. This does NOT include Ready reused accounts. This differs from UnclaimedAccounts who similary have never been claimed but includes all non-failed states.
+* `availableAccounts` is the amount of accounts that have NEVER been claimed AND are READY to be claimed. This does NOT include Ready reused accounts. This differs from UnclaimedAccounts who similarly have never been claimed but includes all non-failed states.
 * `accountsProgressing` shows the approximate value of the number of accounts that are somewhere in the creation workflow but have not finished. (Creating, Pending Verification, or Initializing Regions)
 * `awsLimitDelta` shows the approximate difference between the number of AWS accounts currently created and the limit set in the configmap. This will generally be the same across all individual hive shards in an environment.
 
