Fix broken link to the manual STS setup.

--- a/docs/1.1-InstallationPrerequisites.md
+++ b/docs/1.1-InstallationPrerequisites.md
@@ -95,7 +95,7 @@ The following diagram shows the Account relationship
 ![Account Relationship Diagram](images/jump-role-diagram.png)
 
 
-[Here](./1.2-STSSetup.md) are the manual steps to create the above, these go more into the _why_ of each step, but if you're more interested in just getting your account setup, use [this script](../hack/scripts/aws/setup_aws_accounts.sh):
+[Here](./1.2-ManualSTSSetup.md) are the manual steps to create the above, these go more into the _why_ of each step, but if you're more interested in just getting your account setup, use [this script](../hack/scripts/aws/setup_aws_accounts.sh):
 ```
 ./setup_aws_accounts.sh -a <Assigned AWS Account ID 1> -b <Assigned AWS Account ID 2> -u <username>
 ```
