Add a check script to verify an account is under the root org.

--- a/docs/1.1-InstallationPrerequisites.md
+++ b/docs/1.1-InstallationPrerequisites.md
@@ -120,6 +120,14 @@ You can find it by listing the parents of the `osd-staging-1` account (take the 
 aws organizations list-parents --child-id <Assigned AWS Account ID 1> --profile osd-staging-1
 ```
 
+However it is recommended to verify the `osd-staging-1` account using the script [verify-organization.sh](../hack/scripts/aws/verify-organization.sh):
+
+```shell
+./verify-organization.sh <Assigned AWS Account ID 1>
+```
+
+It will output if the account is usable.
+
 ### 1.1.3.4 STS Role Validation
 
 Making sense of the STS role chaining process can be confusing at first, so we've added a script to validate that the role chaining works before you try to run it through the operator. The script is located in the `hack/scripts/aws` directory, but for convenience you can run it from the make target: `make check-sts-setup`
